Increased contranst of the page and line spacing. Fixed small spelling mistakes.

--- a/generated_html/default.css
+++ b/generated_html/default.css
@@ -1,6 +1,6 @@
 :root {  
-  --background: hsla(156, 1.25%, 20.5%, 1);
-  --post_background: hsla(153, 5%, 25%, 1);
+  --background: hsla(156, 1.25%, 11.5%, 1);
+  --post_background: hsla(153, 5%, 15.5%, 1);
   --topic_background: hsla(153, 2.5%, 30%, 1);
   --nav_background:hsl(156,98%,35%);
   --link: hsla(150, 80%, 85%, 1);
@@ -25,6 +25,7 @@ a{
   word-wrap: break-word;
   text-align: justify;
   text-justify: inter-word;
+  line-height: 1.6;
 }
 .topic_field{
    background-color: var(--topic_background);
